Update "hidden" property in the toolbar buttons

This CL update the hidden property of the toolbar buttons based on the
current size class each time the button checks if it should be
displayed in the current size class, even if the result is the same as
the current hidden property.

Bug: 828767
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Iec39f2bb5ca80c78d7a04e0225a9f048c09d0f28
Reviewed-on: https://chromium-review.googlesource.com/1013527
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551325}
Former-commit-id: 75cb62133ff9fcb020cc76c41e10cf35b1aefcbc